--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
 language: java
-jdk:
-  -oraclejdk8
-  
-addons:
-  sonarcloud:
-    organization: jpark131
-    token: 84c442e854d52e57f2ac8712ea9084e6a5544304
-    
-script:
-  -ant build
-  -sonar-scanner
-  
+jdk: 
+- oraclejdk8 
+script: ant build
 dist: trusty
