--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=jpark131_Calculator
+sonar.projectKey=Z_A
 sonar.projectName=Calculator
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/Z/A
-sonar.links.ci=https://travis-ci.org/Z/A
-sonar.links.scm=https://github.com/Z/A
-sonar.links.issue=https://github.com/Z/A/issues
+sonar.links.homepage=https://github.com/jpark131/Calculator
+sonar.links.ci=https://travis-ci.org/jpark131/Calculator
+sonar.links.scm=https://github.com/jpark131/Calculator
+sonar.links.issue=https://github.com/jpark131/Calculator/issues
 
 
 # =====================================================
@@ -16,7 +16,7 @@ sonar.links.issue=https://github.com/Z/A/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=Z
+sonar.organization=jpark131
 sonar.login=84c442e854d52e57f2ac8712ea9084e6a5544304
 sonar.sources=src
 sonar.language=java
