Forgot to replace one Z and one A

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=Z_A
+sonar.projectKey=jpark131_Calculator
 sonar.projectName=Calculator
 
 # =====================================================
